k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: random-text
  name: random-text-svc
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8004
      protocol: TCP
      targetPort: 8080
  selector:
    app: random-text
